--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ asyncpg==0.29.0
 bcrypt==4.1.2
 boto3==1.34.95
 botocore==1.34.95
+certifi==2024.7.4
 cffi==1.16.0
 click==8.1.7
 cryptography==42.0.5
@@ -12,7 +13,9 @@ ecdsa==0.19.0
 fastapi==0.110.1
 greenlet==3.0.3
 h11==0.14.0
+httpcore==1.0.5
 httptools==0.6.1
+httpx==0.27.0
 idna==3.7
 jmespath==1.0.1
 Mako==1.3.3
