--- a/mypy.ini
+++ b/mypy.ini
@@ -1,2 +1,7 @@
 [mypy]
+python_version = 3.11
 ignore_missing_imports = True
+check_untyped_defs = True
+warn_unused_ignores = True
+;disallow_untyped_calls = True
+disallow_untyped_defs = True
