--- a/mypy.ini
+++ b/mypy.ini
@@ -3,5 +3,11 @@ python_version = 3.11
 ignore_missing_imports = True
 check_untyped_defs = True
 warn_unused_ignores = True
-;disallow_untyped_calls = True
+disallow_untyped_calls = True
 disallow_untyped_defs = True
+no_implicit_optional = True
+strict_optional = True
+warn_redundant_casts = True
+warn_return_any = True
+show_error_context = True
+
