--- a/requirements.txt
+++ b/requirements.txt
@@ -12,19 +12,23 @@ click==8.1.7
 cryptography==43.0.0
 ecdsa==0.19.0
 fastapi==0.112.1
+greenlet==3.0.3
 h11==0.14.0
 httpcore==1.0.5
 httptools==0.6.1
 httpx==0.27.0
 idna==3.7
+iniconfig==2.0.0
 jmespath==1.0.1
 Mako==1.3.5
 MarkupSafe==2.1.5
-passlib==1.7.4
+packaging==24.1
+pluggy==1.5.0
 pyasn1==0.6.0
 pycparser==2.22
 pydantic==2.8.2
 pydantic_core==2.20.1
+pytest==8.3.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-jose==3.3.0
